Bug 917160 - AssureBlitted before switching EGLSurfaces with MakeCurrent. r=bjacob, a=akeybl